# StreamOpenCVImagestoFFserver

./: CMakeLists.txt  ffserver.conf  main.cpp  streaming.h
CMakeModules/: FindFFmpeg.cmake
